docs/apache-airflow-providers-google/14.0.0/_sources/_api/tests/system/google/cloud/vertex_ai/example_vertex_ai_auto_ml_video_training/index.rst.txt
tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training
============================================================================

.. py:module:: tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Auto ML operations.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.ENV_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.PROJECT_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.DAG_ID
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.REGION
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.VIDEO_DISPLAY_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.MODEL_DISPLAY_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.RESOURCE_DATA_BUCKET
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.VIDEO_GCS_BUCKET_NAME
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.VIDEO_DATASET
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.VIDEO_DATA_CONFIG
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.create_video_dataset
   tests.system.google.cloud.vertex_ai.example_vertex_ai_auto_ml_video_training.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'vertex_ai_auto_ml_operations'


.. py:data:: REGION
   :value: 'us-central1'


.. py:data:: VIDEO_DISPLAY_NAME
   :value: 'auto-ml-video-Uninferable'


.. py:data:: MODEL_DISPLAY_NAME
   :value: 'auto-ml-video-model-Uninferable'


.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'


.. py:data:: VIDEO_GCS_BUCKET_NAME
   :value: ''


.. py:data:: VIDEO_DATASET

.. py:data:: VIDEO_DATA_CONFIG

.. py:data:: create_video_dataset

.. py:data:: test_run

